--- a/views/app.ejs
+++ b/views/app.ejs
@@ -2,12 +2,15 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li class="navbar-brand">
-        <a href="#/">
-          <img src="/images/logo-sm.png">
+        <a 
+        	href="#/"
+        	style="top: -16px; position: relative;"
+        >
+          Becca's Gourmet Popcorn
         </a>
       </li>
       <li>
-        <h1>Food Management System</h1>
+        <h1>Order Management System</h1>
       </li>
     </ul>
   </div>
