updated order processing system

--- a/assets/templates/dispatch.html
+++ b/assets/templates/dispatch.html
@@ -14,16 +14,10 @@
 			<h4>Order Total</h4>
 		</div>
 		<div class="col-md-2">
-			<h4>Order Restaurants</h4>
-		</div>
-		<div class="col-md-2">
-			<h4>Driver</h4>
-		</div>
-		<div class="col-md-2">
 			<h4>Destination</h4>
 		</div>
 	</div>
-	<div class="row" ng-show="showBig && (authLevel > 2 || userId === authUserId)" ng-init="things = order.things; userId = order.driverId" ng-repeat="order in orders">
+	<div class="row" ng-show="showBig && authLevel > 2" ng-init="things = order.things" ng-repeat="order in orders">
 		<div class="col-md-2">
 			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.finalAge}}</a><br/></span>
 			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.timeToDelivery}}</a><br/></span>
@@ -38,18 +32,6 @@
 			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.total}} ({{order.payType}})</a><br/></span>
 			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.total}} ({{order.payType}})</a><br/></span>
 			<span ng-show="order.orderStatus < 5"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkRed">{{order.total}} ({{order.payType}})</a><br/></span>
-		</div>
-		<div class="col-md-2">
-			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.restaurants}}</a> </span>
-			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.restaurants}}</a> </span>
-			<span ng-show="order.orderStatus < 5"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkRed">{{order.restaurants}}</a> </span>
-		</div>
-		<div class="col-md-2">
-			<span ng-show="order.driver && order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.driver}}</a><br/></span>
-			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.driver}}</a><br/></span>
-			<span ng-show="order.driver && order.orderStatus < 5"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkRed">{{order.driver}}</a><br/></span>
-			<span ng-show="authLevel > 2 && !order.driver && order.orderStatus > 4 && order.orderStatus < 9"><a href="#/dispatch/{{order.id}}" class="leftNavLink">Dispatch Order ({{authLevel}})</a><br/></span>
-			<span ng-show="!order.driver && order.orderStatus < 5" class="leftNavLinkRed">Pending<br/></span>
 		</div>
 		<div class="col-md-2">
 			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.destination}}</a><br/></span>
@@ -72,18 +54,6 @@
 			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.total}} ({{order.payType}})</a><br/></span>
 			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.total}} ({{order.payType}})</a><br/></span>
 			<span ng-show="order.orderStatus < 5"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkRed">{{order.total}} ({{order.payType}})</a><br/></span>
-		</div>
-		<div class="col-md-2">
-			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.restaurants}}</a> </span>
-			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.restaurants}}</a> </span>
-			<span ng-show="order.orderStatus < 5"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkRed">{{order.restaurants}}</a> </span>
-		</div>
-		<div class="col-md-2">
-			<span ng-show="order.driver && order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.driver}}</a><br/></span>
-			<span ng-show="order.orderStatus > 8"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkGreen">{{order.driver}}</a><br/></span>
-			<span ng-show="order.driver && order.orderStatus < 5"><a href="#/orderDetails/{{order.id}}" class="leftNavLinkRed">{{order.driver}}</a><br/></span>
-			<span ng-show="authLevel > 2 && !order.driver && order.orderStatus > 4 && order.orderStatus < 9"><a href="#/dispatch/{{order.id}}" class="leftNavLink">Dispatch Order ({{authLevel}})</a><br/></span>
-			<span ng-show="!order.driver && order.orderStatus < 5" class="leftNavLinkRed">Pending<br/></span>
 		</div>
 		<div class="col-md-2">
 			<span ng-show="order.orderStatus > 4 && order.orderStatus < 9"><a href="#/orderDetails/{{order.id}}" class="leftNavLink">{{order.destination}}</a><br/></span>
